--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Генератор длинных слов</title>
+    <title>Long words generator!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Генератор длинных слов</h1>
-        <label for="lengthRange">Выберите длину слова: <span id="lengthValue">500</span> букв</label>
+        <h1>Long words generator!</h1>
+        <label for="lengthRange">Choose word lenghtt: <span id="lengthValue">500</span> letters</label>
         <input type="range" id="lengthRange" min="5" max="1000" value="500" oninput="updateLengthValue(this.value)">
-        <button onclick="generateWord()">Создать!</button>
+        <button onclick="generateWord()">Create!</button>
         <div id="output" class="output"></div>
     </div>
     <script src="script.js"></script>
