--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Long words generator!</h1>
-        <label for="lengthRange">Choose word lenghtt: <span id="lengthValue">500</span> letters</label>
+        <label for="lengthRange">Choose word lenght: <span id="lengthValue">500</span> letters</label>
         <input type="range" id="lengthRange" min="5" max="1000" value="500" oninput="updateLengthValue(this.value)">
         <button onclick="generateWord()">Create!</button>
         <div id="output" class="output"></div>
