--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Генератор слов</title>
+    <title>Генератор длинных слов</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Генератор длинных слов</h1>
-        <label for="lengthSlider">Длина слова: <span id="lengthValue">5</span></label>
-        <input type="range" id="lengthSlider" min="5" max="1000" value="5">
-        <button id="generateButton">Создать!</button>
+        <label for="lengthRange">Выберите длину слова: <span id="lengthValue">500</span> букв</label>
+        <input type="range" id="lengthRange" min="5" max="1000" value="500" oninput="updateLengthValue(this.value)">
+        <button onclick="generateWord()">Создать!</button>
         <div id="output" class="output"></div>
     </div>
     <script src="script.js"></script>
